@@ -2,11 +2,10 @@
 envlist = py27,py34
 
 [testenv]
-whitelist_externals = echo
-recreate = True
+recreate=True
 install_command=pip install -I --pre {opts} {packages}
 commands=
-    echo 'No tests'
-#   python setup.py -q install_test_dependencies 
-#   python setup.py -q nosetests --tests=reahl/tests
+   python setup.py -q install_test_dependencies 
+   python setup.py -q nosetests --tests=reahl/webdev_dev -i'.*' -t
+
 
